--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "author": "Damilola Jerugba",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "nodemon --quiet ./src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.23",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "graphql-type-json": "^0.3.2",
+    "puppeteer": "^18.0.5"
   }
 }
